added more comments and explanations

--- a/FOREX_RNN.ipynb
+++ b/FOREX_RNN.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Single-currency model\n",
+    "Let's use an RNN to predict the future time evolution of exchange rates using a single currency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data cleaning and preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,33 +26,25 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from IPython.display import clear_output"
+    "from IPython.display import clear_output\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `filename` variable indicates the input currency. There are several different currency files you can choose from."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ansonl/.local/lib/python3.5/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  del sys.path[0]\n",
-      "/home/ansonl/.local/lib/python3.5/site-packages/pandas/core/frame.py:3163: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._where(-key, value, inplace=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -53,7 +60,7 @@
    "source": [
     "# Data input and preprocessing\n",
     "\n",
-    "# Filenames:\n",
+    "# Choice of input files:\n",
     "# DEXCAUS.csv  DEXJPUS.csv  DEXMXUS.csv  DEXUSUK.csv DEXCHUS.csv  DEXKOUS.csv  DEXUSEU.csv  DTWEXM.csv\n",
     "\n",
     "# Reads in currency exchange rate data\n",
@@ -128,6 +135,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Building the RNN\n",
+    "\n",
     "**Parameter tuning the RNN**\n",
     "\n",
     "- Increase the number of timesteps. Note that this also tends to increase the phase delay of the prediction.\n",
@@ -169,6 +178,13 @@
     "\n",
     "# Compiling the RNN\n",
     "regressor.compile(optimizer = 'adam', loss = 'mean_squared_error')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a cool function I found that allows you to live plot the training losses as it happens in real time. This is useful for early stopping and preventing the model from overfitting!"
    ]
   },
   {
@@ -248,6 +264,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the RNN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -269,6 +292,13 @@
     "# Fit the RNN to the Training set\n",
     "history=regressor.fit(X_train, y_train, validation_split=0.2, epochs = 400, \\\n",
     "                      batch_size = 32, callbacks=[plot_losses])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predictions and plots"
    ]
   },
   {
@@ -325,6 +355,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Result looks pretty good! It's interesting how the model even managed to predict the crash near the end of the test set. Even though the predicted depth of the crash was too small, it's still good enough to warn you that something drastic is going to happen.\n",
+    "\n",
+    "From the loss plot, we can see that we could have trained the model with even more epochs, but seeing that the predictions are already very good that's probably not likely to give us any more useful information."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -360,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
